[package]
name = "ldpc-toolbox"
description = "Utilities to aid in LDPC code design"
version = "0.12.0"
readme = "README.md"
homepage = "https://github.com/daniestevez/ldpc-toolbox"
repository = "https://github.com/daniestevez/ldpc-toolbox"
documentation = "https://docs.rs/ldpc-toolbox"
edition = "2024"
authors = ["Daniel Estevez <daniel@destevez.net>"]
license = "MIT OR Apache-2.0"
keywords = ["ldpc", "fec", "graph"]
categories = ["mathematics", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ldpc_toolbox"
crate-type = ["lib", "cdylib", "staticlib"]

# This needs to be present to avoid 'cargo doc' from generating documentation
# for a binary crate named ldpc_toolbox, which clashes with the documentation
# for the library crate.
[[bin]]
name = "ldpc-toolbox"
doc = false
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.16"
ctrlc = "3"
enum-iterator = "2"
humantime = "2"
libc = "0.2"
ndarray = "0.17"
num-complex = "0.4"
num_cpus = "1"
num-traits = "0.2"
rand_chacha = "0.9"
rand = "0.9"
rand_distr = "0.5"
rayon = "1.5"
termination = "0.1"
thiserror = "2"
